force-app/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalNumberOfCapacityBasedResources__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalNumberOfCapacityBasedResources__c</fullName>
    <label>Number of Capacity-Based Resources</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>