force-app/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalNumberOfOptimizableServices__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalNumberOfOptimizableServices__c</fullName>
    <label>Optimizable Appointments</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>