force-app/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalTravelTimeWithoutHomeBefore__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalTravelTimeWithoutHomeBefore__c</fullName>
    <label>Travel Time Between Appointments Before</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>