force-app/main/default/objects/FSL__Territory_Optimization_Request__c/fields/FSL__TotalWorkDurationScheduledAfter__c.field-meta.xml
<CustomField>
    <fullName>FSL__TotalWorkDurationScheduledAfter__c</fullName>
    <label>Scheduled Appointments Duration After</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>